[package]
name = "pubchem-smarts-index"
version = "0.0.0"
edition = "2021"
publish = false
license = "MIT"
description = "Build and query persisted smarts-rs target-index shards for PubChem."

[dependencies]
chrono = "0.4.44"
dotenvy = "0.15.7"
flate2 = "1.1.9"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
smarts-rs = { git = "https://github.com/earth-metabolome-initiative/smarts-rs", branch = "main", features = ["epserde", "indicatif", "rayon", "zstd"] }
smiles-parser = { git = "https://github.com/earth-metabolome-initiative/smiles-parser", branch = "main", default-features = false, features = ["datasets"] }
tokio = { version = "1.52.1", features = ["fs", "io-util", "rt-multi-thread", "time"] }
zenodo-rs = "0.1.6"
zstd = "0.13.3"

[lints.rust]
missing_docs = "deny"
non_ascii_idents = "deny"
rust_2018_idioms = { level = "deny", priority = -1 }
unsafe_op_in_unsafe_fn = "deny"
unreachable_pub = "deny"
unused_lifetimes = "deny"
unused_qualifications = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
dbg_macro = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
unwrap_used = "deny"
missing_const_for_fn = "deny"
module_name_repetitions = "allow"
multiple_crate_versions = "allow"

[profile.release]
codegen-units = 1
debug = 1
lto = "thin"
panic = "abort"

[workspace]
